# general_utils

./: README.md  pylintrc  pyproject.toml
src/: __init__.py  cli.py
src/general_utils/: README_DUPFIND.md  __init__.py  archive.py  compression.py  hashes.py  utils.py
